--- a/ModbusConnectorUI/MainWindow.xaml
+++ b/ModbusConnectorUI/MainWindow.xaml
@@ -57,7 +57,7 @@
             <TextBlock Text="Logs" VerticalAlignment="Bottom"/>
         </Border>
         <Border Padding="10, 0, 10, 10" Grid.Row="3">
-            <TextBox MinLines="10" x:Name="TxtLogs"/>
+            <TextBox MinLines="10" x:Name="TxtLogs" TextWrapping="Wrap"/>
         </Border>
     </Grid>
 </Window>
