--- a/HMIUserApp/MainWindow.xaml
+++ b/HMIUserApp/MainWindow.xaml
@@ -7,12 +7,13 @@
         xmlns:local="clr-namespace:HMIUserApp"
         mc:Ignorable="d"
         x:Name="UserApp"
-        Title="MainWindow" Height="768" Width="1024">
+        Title="HMI USER App" Height="768" Width="1024">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="60" />
             <RowDefinition Height="60" />
             <RowDefinition Height="60" />
+            <RowDefinition Height="50" />
             <RowDefinition Height="50" />
             <RowDefinition Height="40" />
             <RowDefinition Height="*" />
@@ -119,7 +120,7 @@
                 
             </Grid>
         </Border>
-        <Border Padding="10, 0" Grid.Row="3">
+        <Border Padding="10, 5" Grid.Row="3">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="180"/>
@@ -129,7 +130,7 @@
                     <ColumnDefinition Width="280"/>
                     <ColumnDefinition Width="1*"/>
                 </Grid.ColumnDefinitions>
-                <TextBlock Text="Save on database" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
+                <TextBlock Text="Save to database" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
                 <ts:HorizontalToggleSwitch 
                     Grid.Column="1" 
                     CheckedContent="On"
@@ -144,7 +145,7 @@
                     Tag="SaveDatabase"
                     HorizontalAlignment="Left"
                 />
-                <TextBlock Text="Save on CSV" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
+                <TextBlock Text="Save to CSV" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
                 <ts:HorizontalToggleSwitch 
                     Grid.Column="3" 
                     CheckedContent="On"
@@ -169,9 +170,35 @@
                     TextChanged="TxtInterval_TextChanged"
                 />
             </Grid>
-
         </Border>
-        <Border Padding="10, 10" Grid.Row="4">
+        <Border Padding="10, 5" Grid.Row="4">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="180"/>
+                    <ColumnDefinition Width="1*"/>
+                    <ColumnDefinition Width="3*"/>
+                    <ColumnDefinition Width="1*"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock Text="Publish to Insight" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
+                <ts:HorizontalToggleSwitch 
+                    x:Name="tsUpload"
+                    Grid.Column="1" 
+                    CheckedContent="On"
+                    UncheckedContent="Off" 
+                    FontSize="18" 
+                    IsChecked="True" 
+                    Padding="1" 
+                    Width="85" 
+                    Height="35" 
+                    Checked="OnChecked" 
+                    Unchecked="OnUnChecked"
+                    Tag="UploadCSVDATA"
+                    HorizontalAlignment="Left"
+                />
+                <Button x:Name="BtnUpload" Grid.Column="5" Content="Upload CSV" Margin="10, 0" Click="OnUploadCsv" />
+            </Grid>
+        </Border>
+        <Border Padding="10, 10" Grid.Row="5">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="1*"/>
@@ -181,7 +208,7 @@
                 <TextBlock x:Name="LblLog" Text="" Grid.Column="1" HorizontalAlignment="Right" Padding="20 0" Foreground="Blue"/>
             </Grid>
         </Border>
-        <Border Padding="10, 0, 10, 10" Grid.Row="5">
+        <Border Padding="10, 0, 10, 10" Grid.Row="6">
             <DataGrid Name="DGLogs" ColumnWidth="*"></DataGrid>
         </Border>
     </Grid>
