Update HMIUser app ui design

--- a/HMIUserApp/MainWindow.xaml
+++ b/HMIUserApp/MainWindow.xaml
@@ -3,213 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:ts="clr-namespace:ToggleSwitch;assembly=ToggleSwitch"
         xmlns:local="clr-namespace:HMIUserApp"
         mc:Ignorable="d"
-        x:Name="UserApp"
-        Title="HMI USER App" Height="768" Width="1024">
+        Title="HMI USER App" Height="880" Width="1024">
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="60" />
-            <RowDefinition Height="60" />
-            <RowDefinition Height="60" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="50" />
-            <RowDefinition Height="40" />
-            <RowDefinition Height="*" />
-        </Grid.RowDefinitions>
-        <Border Padding="10, 10" Grid.Row="0">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="120"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="250"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Device name:" Grid.Column="0" Margin="10, 0" VerticalAlignment="Center" />
-                <TextBlock Text="Modbus Simulator" Grid.Column="1" Margin="10, 0" VerticalAlignment="Center" />
-                <TextBlock Text="Communication protocol type:" Grid.Column="2" Margin="10, 0"  VerticalAlignment="Center" />
-                <TextBlock Text="Modbus TCP" Grid.Column="3" Margin="10, 0"  VerticalAlignment="Center" />
-                <ts:HorizontalToggleSwitch 
-                    Grid.Column="4" 
-                    CheckedContent="Live"
-                    UncheckedContent="History" 
-                    FontSize="18" 
-                    IsChecked="True" 
-                    UncheckedBackground="Bisque" 
-                    Padding="2" 
-                    Width="130" 
-                    Height="35" 
-                    Checked="OnChecked" 
-                    Unchecked="OnUnChecked"
-                    Tag="LiveHistory"
-                />
-            </Grid>
-        </Border>
-        <Border Padding="10, 10" Grid.Row="1">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="130"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="50"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="2*"/>
-                    <ColumnDefinition Width="2*"/>
-
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Device address:" Grid.Column="0" Margin="10, 0" VerticalAlignment="Center" />
-                <TextBox x:Name="TxtIP" Grid.Column="1" Margin="10, 0" VerticalContentAlignment="Center" Text="127.0.0.1" />
-                <TextBlock Text="Port:" Grid.Column="2" Margin="10, 0"  VerticalAlignment="Center" />
-                <TextBox x:Name="TxtPort" Grid.Column="3" Margin="10, 0" VerticalContentAlignment="Center" Text="502" />
-                <Button x:Name="BtnConnect" Grid.Column="4" Content="Connect" Margin="10, 0" Click="OnConnect" />
-                <Button x:Name="BtnDisconnect" Grid.Column="5" Content="Disconnect" Margin="10, 0" Click="OnDisconnect" />
-            </Grid>
-        </Border>
-        <Border Padding="10, 10" Grid.Row="2">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="180"/>
-                    <ColumnDefinition Width="*"/>
-                </Grid.ColumnDefinitions>
-                <ComboBox x:Name="tagsList" Height="40" VerticalAlignment="Center" Grid.Column="0" VerticalContentAlignment="Center" SelectionChanged="TagsList_SelectionChanged">
-                    <ComboBoxItem Content="Analog Input" IsSelected="True" Tag="AI"></ComboBoxItem>
-                    <ComboBoxItem Content="Analog Output" Tag="AO"></ComboBoxItem>
-                    <ComboBoxItem Content="Digital Input" Tag="CI"></ComboBoxItem>
-                    <ComboBoxItem Content="Digital Output" Tag="CO"></ComboBoxItem>
-                </ComboBox>
-                <Border x:Name="BorderSetValue" Grid.Column="1" Visibility="Hidden">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="150"/>
-                            <ColumnDefinition Width="2*"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="2*"/>
-                        </Grid.ColumnDefinitions>
-                        
-                        <TextBlock Text="Modbus Address:" Grid.Column="0" Margin="10, 0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                        <ComboBox 
-                            x:Name="AddressList" 
-                            Height="40" 
-                            VerticalAlignment="Center" 
-                            Grid.Column="1" 
-                            VerticalContentAlignment="Center" 
-                        />
-                        <TextBlock Text="Value:" Grid.Column="2" Margin="10, 0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
-                        <TextBox x:Name="TxtValue" Grid.Column="3" Margin="10, 0" VerticalContentAlignment="Center" />
-                        <Button x:Name="BtnSetValue" Grid.Column="4" Content="Set Value" Margin="10, 0" Click="OnSetValue" />
-                    </Grid>
-                </Border>
-                <Border x:Name="BorderCalendar" Grid.Column="1" Visibility="Hidden">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="200"/>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="200"/>
-                            <ColumnDefinition Width="1*"/>
-                            <ColumnDefinition Width="1*"/>
-                        </Grid.ColumnDefinitions>
-                        <DatePicker x:Name="StartDate" Margin="10 0" VerticalContentAlignment="Center" FontSize="18" SelectedDateChanged="StartDate_Changed"/>
-                        <TextBlock Text="~" Grid.Column="1" Margin="10, 0" VerticalAlignment="Center" HorizontalAlignment="Center" />
-                        <DatePicker x:Name="EndDate" Grid.Column="2" Margin="10 0" VerticalContentAlignment="Center" FontSize="18" SelectedDateChanged="EndDate_Changed"/>
-                        <Button x:Name="BtnRefresh" Grid.Column="3" Content="Refresh" Margin="10, 0" Click="OnHistoryRefresh" />
-                        <Button x:Name="BtnDelete" Grid.Column="4" Content="Delete" Margin="10, 0" Click="OnDelete" />
-                    </Grid>
-                </Border>
-                
-            </Grid>
-        </Border>
-        <Border Padding="10, 5" Grid.Row="3">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="180"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="180"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="280"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Save to database" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
-                <ts:HorizontalToggleSwitch 
-                    Grid.Column="1" 
-                    CheckedContent="On"
-                    UncheckedContent="Off" 
-                    FontSize="18" 
-                    IsChecked="True" 
-                    Padding="1" 
-                    Width="85" 
-                    Height="35" 
-                    Checked="OnChecked" 
-                    Unchecked="OnUnChecked"
-                    Tag="SaveDatabase"
-                    HorizontalAlignment="Left"
-                />
-                <TextBlock Text="Save to CSV" Grid.Column="2" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
-                <ts:HorizontalToggleSwitch 
-                    Grid.Column="3" 
-                    CheckedContent="On"
-                    UncheckedContent="Off" 
-                    FontSize="18" 
-                    IsChecked="True" 
-                    Padding="1" 
-                    Width="85" 
-                    Height="35" 
-                    Checked="OnChecked" 
-                    Unchecked="OnUnChecked"
-                    Tag="SaveCsv"
-                    HorizontalAlignment="Left"
-                />
-                <TextBlock Text="Storage Interval (seconds)" Grid.Column="4" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
-                <TextBox 
-                    x:Name="TxtInterval" 
-                    Grid.Column="5" 
-                    Margin="10, 0" 
-                    VerticalContentAlignment="Center" 
-                    Text="1" 
-                    TextChanged="TxtInterval_TextChanged"
-                />
-            </Grid>
-        </Border>
-        <Border Padding="10, 5" Grid.Row="4">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="180"/>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="3*"/>
-                    <ColumnDefinition Width="1*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Publish to Insight" Grid.Column="0" VerticalAlignment="Center" HorizontalAlignment="Right" Padding="10 0"/>
-                <ts:HorizontalToggleSwitch 
-                    x:Name="tsUpload"
-                    Grid.Column="1" 
-                    CheckedContent="On"
-                    UncheckedContent="Off" 
-                    FontSize="18" 
-                    IsChecked="True" 
-                    Padding="1" 
-                    Width="85" 
-                    Height="35" 
-                    Checked="OnChecked" 
-                    Unchecked="OnUnChecked"
-                    Tag="UploadCSVDATA"
-                    HorizontalAlignment="Left"
-                />
-                <Button x:Name="BtnUpload" Grid.Column="5" Content="Upload CSV" Margin="10, 0" Click="OnUploadCsv" />
-            </Grid>
-        </Border>
-        <Border Padding="10, 10" Grid.Row="5">
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="1*"/>
-                    <ColumnDefinition Width="2*"/>
-                </Grid.ColumnDefinitions>
-                <TextBlock Text="Logs" Grid.Column="0" VerticalAlignment="Bottom"/>
-                <TextBlock x:Name="LblLog" Text="" Grid.Column="1" HorizontalAlignment="Right" Padding="20 0" Foreground="Blue"/>
-            </Grid>
-        </Border>
-        <Border Padding="10, 0, 10, 10" Grid.Row="6">
-            <DataGrid Name="DGLogs" ColumnWidth="*"></DataGrid>
-        </Border>
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden"/>
     </Grid>
 </Window>
