--- a/HMIUserApp/App.xaml
+++ b/HMIUserApp/App.xaml
@@ -4,7 +4,7 @@
              xmlns:local="clr-namespace:HMIUserApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-        <Style TargetType="{x:Type Button}">
+        <Style x:Key="NormalButton" TargetType="{x:Type Button}">
             <Setter Property="Background" Value="#009788" />
             <Setter Property="Foreground" Value="White" />
             <Setter Property="FontSize" Value="16" />
@@ -46,6 +46,20 @@
         <Style TargetType="{x:Type TextBox}">
             <Setter Property="FontSize" Value="15" />
             <Setter Property="Padding" Value="5, 0" />
+        </Style>
+        <Style x:Key="LinkButton" TargetType="{x:Type Button}" >
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <TextBlock TextDecorations="Underline" Foreground="{TemplateBinding Foreground}" Text="{TemplateBinding Content}" />
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Foreground" Value="Red" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
         </Style>
     </Application.Resources>
 </Application>
